--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="page-top">
+    <div class="page-top" id="js-pagetop">
         <a href="#"></a>
     </div>
     <header id="header">
