--- a/index.html
+++ b/index.html
@@ -181,6 +181,6 @@
             <p>Copyright © 2021 Akarui HOUSE All Rights Reserved.</p>
         </footer>
     </div>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
